@@ -4,6 +4,9 @@ Changelog
 1.3 (unreleased)
 ----------------
 
+- Add uninstall profile.
+  [thet]
+
 - Added more strings classifiers items for this packages
   [macagua]
 
